--- a/index.html
+++ b/index.html
@@ -73,6 +73,6 @@
 
 <footer class="attribution">
   Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-  Coded by <a href="#">Your Name Here</a>.
+  Coded by <a href="#">ADENIYI SMART :)</a>.
 </footer>
 </html>
