--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <div class="star-div">
     <img src="images/icon-star.svg" alt="star-image">
   </div>
-  <h2 class = "section-h2 section-1-h2"> How did we do? </h2>
+  <h1 class = "section-h2 section-1-h2"> How did we do? </h1>
 
   <p class = "section-p section-1-p">
     Please let us know how we did with your support request. All feedback is appreciated 
@@ -50,7 +50,7 @@
       </button>
 </main>
   
-<main class="section-2">
+<section class="section-2">
       
   <div class="thank-you-image">
     <img src="images/illustration-thank-you.svg" alt="thank-you-image">
@@ -60,15 +60,15 @@
     You selected nothing out of 5
   </p>
 
-  <h2 class="section-h2 section-2-h2">
+  <h1 class="section-h2 section-2-h2">
     Thank you!
-  </h2>
+  </h1>
 
   <p class="section-p section-2-p">
     We appreciate you taking the time to give a rating. If you ever need more support, 
     don’t hesitate to get in touch!
   </p>
-</main>
+</section>
 </body>
 
 <footer class="attribution">
